--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,6 +98,8 @@ ul.menu li a:hover {
 ul.list { margin-top:0; }
 ul.list li { margin-bottom:5px; }
 
+pre { padding:1em 2em; border-style:solid;border-width:1px 0;border-color:#ddd;background-color:#efefef; }
+
 .footer {
   bottom:1em;
   left:0;
