--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,7 +105,7 @@ ul.menu li a:hover {
 ul.list { margin-top:0; }
 ul.list li { margin-bottom:5px; }
 
-.codeBlock, pre { padding:1em 2em; border-style:solid;border-width:1px 0;border-color:#ddd;background-color:#efefef; }
+.codeBlock, pre { padding:1em 2em;border-style:solid;border-width:1px 0;border-color:#ddd;background-color:#efefef; word-wrap:break-word; }
 
 .codeBlock {display:block;}
 
